--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 22%; background:linear-gradient(to bottom,#000,#151515);
+    /* height: 22%; background:linear-gradient(to bottom,#000,#151515); */
     filter: blur(8px); 
     z-index: 1;
     
@@ -79,10 +79,11 @@ html{
     position: absolute;
     width: 37%;
     height: 500px;
+    overflow-y: hidden;
+    border-radius: 4px;
     top:25%;
     background-size: cover;
     object-fit: cover;
-
     filter: drop-shadow(60);
     filter: drop-shadow(0 0 60px rgba(0, 0, 0, 0.5));  
 }
@@ -113,6 +114,7 @@ html{
     width: 100%;
     box-sizing: border-box;
     padding: 10px;
+    border-radius: 10px;
 }
 .header-container::after{
     content: "";
@@ -205,12 +207,13 @@ html{
 
 .filter-buttons{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height:100%;
-    margin-top: 5px;
-    margin-left: 200px;
+    align-items: flex-end;
+    justify-content: flex-end;
+    width: 90%;
+    height: 90%;
+    margin-top: 90px;
+    margin-left: 00px;
+    position: relative;
 }
 .filter-buttons button{
     padding: 10px 20px;
@@ -220,6 +223,7 @@ html{
     background-color: green;
     border-radius:4px;
     border: none;
+    position: relative;
         
 
 }.filter-buttons button:hover{
@@ -230,7 +234,7 @@ html{
 }
 .display{
     width: 50%;
-    margin-left: 30px;
+    margin-left: 250px;
 }
 .footer{
     margin-top: 50px;
@@ -258,10 +262,9 @@ html{
     gap: 30px;
    
     
-
 }
 .wrapper{
-    margin-top: 20px;
+    margin-top: 20pxpx;
 }
 .furry{
     font-size: 3rem;
@@ -321,6 +324,7 @@ html{
 
 
 /* ***************************ABOUT PAGE */
+
 
 
 
